[project]
name = "dodge-mcp-server"
version = "0.1.0"
description = "MCP Server for the Dodge Construction Network API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrew Buono", email = "abuono.326@gmail.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dodge-mcp = "dodge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dodge_mcp"]
